[tool.poetry]
name = "farmgbm12"
version = "0.1.0"
description = "Package Simulates Geometric Brownian Motion"
authors = ["Farmer122 <94114999+Farmer122@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
